uinta pre-mobile

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- image compare -->
-        <script src="cocoen/dist/js/cocoen-jquery.min.js"></script>
-        <link rel="stylesheet" href="cocoen/dist/css/cocoen.min.css">
-        <script src="cocoen/dist/js/cocoen.min.js"></script>
+        <script src="https://unpkg.com/cocoen@2.0.5/dist/js/cocoen-jquery.min.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/cocoen@2.0.5/dist/css/cocoen.min.css">
+        <!-- <script src="cocoen/dist/js/cocoen.min.js"></script> -->
+        <script src="https://unpkg.com/cocoen@2.0.5/dist/js/cocoen.min.js"></script>
+
    
 <!-- flickity slider -->
         <link rel="stylesheet" href="flickity/css/flickity-docs.css"  media="screen">
