--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <title>Uinta</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <!-- image compare -->
         <script src="https://unpkg.com/cocoen@2.0.5/dist/js/cocoen-jquery.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/cocoen@2.0.5/dist/css/cocoen.min.css">
@@ -150,7 +149,7 @@
             </div>
         </div>
 
-        <div class="fw-img">
+        <div class="fw-img margin-bottom">
             <img src="images/Cutthroat lifestyle.PNG" alt="">
         </div>
 <!-- splash quote -->
