worked on mobile

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                     <video type="video/mp4" autoplay muted loop class="corners-gif" width="100%" height="auto" src="videos/Detour.mp4" alt="">Your browser does not support the video tag</video>
                 
                 </div>
-                <div>
+                <div class="gif-container">
                     <video type="video/mp4" autoplay muted loop class="corners-gif" width="100%" height="auto" src="videos/Cutthroat.mp4" alt="">Your browser does not support the video tag</video>
                 </div>
             </div>
             <div class="corners-row"> 
-                <div>
+                <div class="gif-container">
                     <video type="video/mp4" autoplay muted loop class="corners-gif" width="100%" height="auto" src="videos/Mango.mp4" alt="">Your browser does not support the video tag</video>
                 </div>
-                <div>
+                <div class="gif-container">
                     <video type="video/mp4" autoplay muted loop class="corners-gif" width="100%" height="auto" src="videos/ClearDaze.mp4" alt="">Your browser does not support the video tag</video>
                 </div>
             </div>        
